# ai-playable-novel-mvp

./: .env.example  .gitignore  AI_Playable_Novel_MVP_Dev_Spec_Phased_v0_3.md  API_CONTRACT.md  ARCHITECTURE.md  DECISIONS.md  README.md  pyproject.toml  worker.py  wrangler.jsonc
app/: __init__.py  main.py
app/api/: errors.py  router.py
app/api/routes/: device_session.py  feedback.py  health.py  stories.py  templates.py
app/core/: config.py
app/db/: session.py
app/llm/: __init__.py  fake_provider.py  gateway.py  ledger.py  openai_compatible_provider.py  parser.py  provider.py  provider_factory.py  quota.py  router.py  story_opening.py
app/schemas/: device_session.py  feedback.py  state.py  stories.py  templates.py
app/services/: cloudflare_story_store.py  device_session_service.py  feedback_service.py  safety_filter.py  state_manager.py  story_service.py  template_service.py
ios/: README.md
ios/PlayableNovel/: APIClient.swift  APIModels.swift  AppConfig.swift  ContentView.swift  DeviceIDStore.swift  DeviceSessionBootstrapper.swift  LaunchHomeViewModel.swift  LaunchScreen.storyboard  LocalStoryCache.swift  PlayableNovelApp.swift
ios/PlayableNovel.xcodeproj/: project.pbxproj
ios/PlayableNovel.xcodeproj/xcshareddata/xcschemes/: PlayableNovel.xcscheme
scripts/: smoke_real_provider.py
tests/: conftest.py  test_cloudflare_story_store.py  test_config.py  test_device_session.py  test_feedback.py  test_health.py  test_llm_provider.py  test_stories.py  test_story_state.py  test_templates.py
(+1 files in other folders)
